--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -134,9 +134,9 @@
         <main>
             <section id="purpose">
                 <h2>1. Syfte och målgrupp</h2>
-                <p>I uppgiften skapades en webbplats för det påhittade företaget <strong>Nordic Calm Spa</strong>, ett modernt spa med fokus på återhämtning, balans och välbefinnande. Webbplatsen ska representera spaets verksamhet och göra det enkelt för kunder att ta del av information, se utbudet, boka sin vistelse och behandlingar.
+                <p>I uppgiften skapades en webbplats för det påhittade företaget <strong>Nordic Calm Spa</strong>, ett modernt spa med fokus på återhämtning, balans och välbefinnande. Webbplatsen ska spegla spaets verksamhet och göra det enkelt för kunder att ta del av information, se utbudet, boka sin vistelse och behandlingar.
                 </p>
-                <p>Syfte med webbplatsen är att:</p>
+                <p>Syftet med webbplatsen är att:</p>
                 <ul class="req">
                     <li>presentera behandlingar och paket på ett tydligt och inspirerande sätt.</li>
                     <li>skapa en känsla av lugn och professionalism genom design och bildval.</li>
@@ -209,7 +209,7 @@
                 <h3>Surface Plane</h3>
                 <p>Slutligen utformades det visuella gränssnittet enligt <em>Surface Plane</em> (s. 136–137). Designen inspirerades av spa-miljöer, med lugna färger, mycket utrymme och harmoniska bilder. Jag testade olika färgkombinationer, typsnitt och bildval för att skapa en visuell identitet som förmedlar stillhet och professionalitet (s. 146–147). Jag ville även hålla allt innehåll så enhetligt som möjligt (s. 141). Webbplatsen byggdes i HTML och CSS och gjordes responsiv för att fungera väl på både dator, surfplatta och i mobil. En ny sektion riktad till företag lades till för att visa möjligheter till friskvård och personalaktivitet, samt bredda målgruppen och tydliggöra verksamhetens erbjudande.</p>
                 <br>
-                <p>Sammanfattningsvis har Garretts modell gett en tydlig struktur för hela processen – från mål och innehål till design och färdig webbplats.</p>
+                <p>Garretts modell gav en tydlig struktur för hela processen – från mål och innehål till design och färdig webbplats.</p>
             </section>
             <section id="images">
                 <h2>4. Bilder</h2>
@@ -251,6 +251,7 @@
                         <br>⤷ <strong>uppfyllt</strong>. All text är på svenska och har utformats för att spegla varumärkets värden och känsla.
                     </li>
                 </ul>
+                
                 <h3>Funktion</h3>
                 <p>Användaren ska:</p>
                 <ul class="check">
@@ -276,13 +277,14 @@
                         <br>⤷ <strong>uppfyllt</strong>. Hovring ger visuella förändringar som stärker användarupplevelsen och tydliggör klickbara element.
                     </li>
                 </ul>
-                <p>Sammanfattningsvis uppfyller webbplatsen samtliga krav som definierats i kravspecifikationen.</p>
+<p>Samtliga krav enligt kravspecifikationen är därmed uppfylla, vilket visar att design- och utvecklingsprocessen fungerat effektivt.</p>
             </section>
             <section id="user-test">
                 <h2>6. Användartest</h2>
                 <h3>- med metoden "Tänka högt" (Thinking Out Loud)</h3>
                 <!-- Endast för VG. Har du inte utfört användartest, tar du bort detta avsnitt (hela section-elementet). -->
                 <!-- Beskriv hur du genomförde användartestet. Ange vilka brister du upptäckte och hur du åtgärdat dem. -->
+                 <p>Användartestet genomfördes genom att testpersonen fick uppgifter att utföra (t.ex. hitta pris för behandling, boka vistelse) samtidigt som hon/han tänkte högt och kommenterade sin upplevelse.</p>
                 <h3>Testperson 1: Erica</h3>
                 <p><strong>Jag genomförde användartestet på min syster som fick navigera runt på webbplatsen och ge återkoppling utifrån sin upplevelse som besökare. Hon påpekade flera förbättringsmöjligheter, bland annat:</strong></p>
                 <ul class="req">
