--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -284,9 +284,9 @@
                 <h3>- med metoden "Tänka högt" (Thinking Out Loud)</h3>
                 <!-- Endast för VG. Har du inte utfört användartest, tar du bort detta avsnitt (hela section-elementet). -->
                 <!-- Beskriv hur du genomförde användartestet. Ange vilka brister du upptäckte och hur du åtgärdat dem. -->
-                 <p>Användartestet genomfördes genom att testpersonen fick uppgifter att utföra (t.ex. hitta pris för behandling, boka vistelse) samtidigt som hon/han tänkte högt och kommenterade sin upplevelse.</p>
-                <h3>Testperson 1: Erica</h3>
-                <p><strong>Jag genomförde användartestet på min syster som fick navigera runt på webbplatsen och ge återkoppling utifrån sin upplevelse som besökare. Hon påpekade flera förbättringsmöjligheter, bland annat:</strong></p>
+                 <p>Användartestet genomfördes genom att testpersonen fick uppgifter att utföra (t.ex. hitta pris för behandling, boka vistelse) samtidigt som hon/han tänkte högt och kommenterade sin upplevelse. Efter varje testperson genomfördes vissa förändringar innan nästa person gjorde testet.</p>
+                <h3>Testperson 1: Erica Söderberg</h3>
+                <p><strong>Jag genomförde användartestet på min syster som fick navigera runt på webbplatsen och ge återkoppling utifrån sin upplevelse som besökare. Hon fångade en del problem och påpekade flera förbättringsmöjligheter, bland annat:</strong></p>
                 <ul class="req">
                     <li>Att vissa artiklar hade hover-effekt trots att de redan innehöll all information, vilket skapade förvirring.</li>
                     <li>Att inputfälten i formulären upplevdes som något låga och trånga.</li>
@@ -306,18 +306,18 @@
                     <li>Bytte namn på “Spa utan övernattning” till “Dagsspa”.</li>
                     <li>Lade till information om laddstolpar för elbil på både “Kontakt & FAQ” och i hotellinformationen.</li>
                     <li>Skapade separata sidor för de olika rummen med mer information om rummen och faciliteterna.</li>
+                    <li>Kategoriserade frågorna i FAQ-sektionen.</li>
                 </ul>
-                <p>Jag planerar dessutom att, om tid finns, kategorisera frågorna i FAQ-sektionen för att ytterligare förbättra användarvänligheten.</p>
 
-                <h3>Testperson 2: Daniel</h3>
-                <p><strong>Jag genomförde även användartestet på min sambo Daniel. Han hade följande synpunkter:</strong></p>
+                <h3>Testperson 2: Daniel Nevanperä</h3>
+                <p><strong>Jag genomförde sedan användartestet på min sambo Daniel. Han uttryckte följande:</strong></p>
                 <ul>
                     <li>Tydlig och logisk navigering.</li>
                     <li>Intressant innehåll och inspirerande bilder.</li>
                     <li>Ingenting som inte verkar fungera – kul att formulären går att skicka!</li>
                     <li>Hade anlitat mig direkt.</li>
                 </ul>
-                <p><strong>Förslag på förbättringar:</strong></p>
+                <p><strong>Synpunkter och förslag på förbättringar:</strong></p>
                 <ul class="req">
                     <li>Saknade öppettider för restaurang.</li>
                     <li>Mer information om ritualen hade varit bra.</li>
@@ -331,6 +331,27 @@
                     <li>Formulerade om texten om tvagningsritualen för att bli mer informativ.</li>
                     <li>Lade till informationen i "sidenote" om lån av handduk, badrock och tofflor även på "Spa & Relax"-sidan.</li>
                     <li>Lade till information om parkering i footern.</li>
+                </ul>
+
+                                <h3>Testperson 3: Jessica Olsson</h3>
+                <p><strong>Som sista testperson ringde jag min mamma på videosamtal och hon provade webbplatsen både på sin mobil och dator. Hennes första intryck:</strong></p>
+                <ul>
+                    <li>Sidorna laddar snabbt och helhetskänslan är lugn och harmonisk.</li>
+                    <li>Gillar effekten på texten i hero.</li>
+                    <li>Bra att det finns många "genvägar" till bokningen.</li>
+                    <li>Snygg hemsida i mobilen, både liggande och stående.</li>
+                </ul>
+                <p><strong>Synpunkter och förbättringsförslag:</strong></p>
+                <ul class="req">
+                    <li>Textblocken på vissa sidor skulle kunna kortas ner för att göra det lättare att läsa, särskilt på mobil.</li>
+                    <li>Saknade genväg till startsidan i mobilläge – måste öppna menyn.</li>
+                    <li>Hade varit trevligt med mer människor i bilderna.</li>
+                    <li>Lite för många knappar i hero på "Erbjudanden & paket".</li>
+                </ul>
+                <p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
+                <ul class="check">
+                    <li>Kortade ner texten så mycket som möjligt utan att skala av känsla eller förlora information.</li>
+                    <p>Planerar att, om tid finns, fixa en mer lättillgänlig genväg till startsidan i mobilläge. Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. Ska försöka hitta en bättre lösning för hero på sidan för "Erbjudanden & paket".</p>
                 </ul>
             </section>
             <section id="references">
