--- a/book.html
+++ b/book.html
@@ -56,7 +56,8 @@
             <div class="booking">
                 <h2>Nordic Calm Spa
                     <br>
-                    Bokningsförfrågan</h2>
+                    Bokningsförfrågan
+                </h2>
                 <p class="form-note">Vi bekräftar din bokning via e-post inom 24 timmar.</p>
                 <form name="book" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
                     <input type="hidden" name="form-name" value="book">
@@ -97,39 +98,39 @@
 
                         <div class="form-section treatment">
                             <label for="treatment" id="treatment-heading">Välj behandling:</label>
-                        <select name="treatment" id="treatment">
-                            <option value="" selected>Välj ett alternativ</option>
-                            <optgroup label="Ritualer & signaturbehandlingar">
+                            <select name="treatment" id="treatment">
+                                <option value="" selected>Välj ett alternativ</option>
+                                <optgroup label="Ritualer & signaturbehandlingar">
 
-                                <option>Antistress Treatment, 60 min</option>
-                                <option>Aroma Balance, 60 min</option>
-                                <option>Body & Face Ritual, 90 min</option>
-                                <option>Deep Recovery, 45 min</option>
-                                <option>Deep Recovery, 60 min</option>
-                                <option>Duo Deluxe, 90 min</option>
-                                <option>Grön Spa Ritual, 75 min</option>
-                                <option>Mother's Touch, 90 min</option>
-                                <option>Hot Stone Harmony, 60 min</option>
-                                <option>Hot Stone Harmony, 90 min</option>
-                            </optgroup>
-                            <optgroup label="Klassiska massagebehandlingar">
-                                <option>Ansikts- & skalpmassage, 30 min</option>
-                                <option>Fot & Ben Retreat, 30 min</option>
-                                <option>Fot & Ben Retreat, 45 min</option>
-                                <option>Klassisk Helkroppsmassage, 60 min</option>
-                                <option>Klassisk Helkroppsmassage, 90 min</option>
-                                <option>Rygg- & nackmassage, 30 min</option>
-                                <option>Rygg- & nackmassage, 45 min</option>
-                            </optgroup>
-                            <optgroup label="Ansiktsbehandling">
-                                <option>Arctic Ritual, 80 min</option>
-                                <option>Deep Detox, 70 min</option>
-                                <option>Hydra Boost, 75 min</option>
-                                <option>Nordic Glow, 60 min</option>
-                                <option>Pure Calm, 50 min</option>
-                                <option>Timeless Beauty, 75 min</option>
-                            </optgroup>
-                        </select>
+                                    <option>Antistress Treatment, 60 min</option>
+                                    <option>Aroma Balance, 60 min</option>
+                                    <option>Body & Face Ritual, 90 min</option>
+                                    <option>Deep Recovery, 45 min</option>
+                                    <option>Deep Recovery, 60 min</option>
+                                    <option>Duo Deluxe, 90 min</option>
+                                    <option>Grön Spa Ritual, 75 min</option>
+                                    <option>Mother's Touch, 90 min</option>
+                                    <option>Hot Stone Harmony, 60 min</option>
+                                    <option>Hot Stone Harmony, 90 min</option>
+                                </optgroup>
+                                <optgroup label="Klassiska massagebehandlingar">
+                                    <option>Ansikts- & skalpmassage, 30 min</option>
+                                    <option>Fot & Ben Retreat, 30 min</option>
+                                    <option>Fot & Ben Retreat, 45 min</option>
+                                    <option>Klassisk Helkroppsmassage, 60 min</option>
+                                    <option>Klassisk Helkroppsmassage, 90 min</option>
+                                    <option>Rygg- & nackmassage, 30 min</option>
+                                    <option>Rygg- & nackmassage, 45 min</option>
+                                </optgroup>
+                                <optgroup label="Ansiktsbehandling">
+                                    <option>Arctic Ritual, 80 min</option>
+                                    <option>Deep Detox, 70 min</option>
+                                    <option>Hydra Boost, 75 min</option>
+                                    <option>Nordic Glow, 60 min</option>
+                                    <option>Pure Calm, 50 min</option>
+                                    <option>Timeless Beauty, 75 min</option>
+                                </optgroup>
+                            </select>
                         </div>
                         <div class="form-section package">
                             <label for="package" id="package-heading">Välj paket:</label>
@@ -192,8 +193,8 @@
                     <li><a href="book.html" class="active">Boka nu</a></li>
                     <li><a href="contact.html">Kontakt & FAQ</a></li>
                 </ul>
-            <h3>Parkering</h3>
-                <p>                <i class="fa-solid fa-square-parking"></i> Fri parkering för våra gäster.</p>
+                <h3>Parkering</h3>
+                <p> <i class="fa-solid fa-square-parking"></i> Fri parkering för våra gäster.</p>
             </div>
             <div class="footer-info">
                 <h3>Kontakta oss</h3>
