--- a/menu/menu.html
+++ b/menu/menu.html
@@ -155,11 +155,12 @@
                         <br>
                         Vitt: Chardonnay, Sauvignon Blanc, Riesling
                         <br>
-                        Rosé: Provence Rosé</dd>
+                        Rosé: Provence Rosé
+                    </dd>
 
                     <dt>Drinkar</dt>
                     <dd>Margarita, Mojito, Gin & Tonic, Aperol Spritz</dd>
-                    </dl>
+                </dl>
 
                 <a href="drinks.html" target="_blank" id="drink-menu-link">Se vår dryckesmeny</a>
             </section>
