--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -209,7 +209,7 @@
                 <h3>Surface Plane</h3>
                 <p>Slutligen utformades det visuella gränssnittet enligt <em>Surface Plane</em> (s. 136–137). Designen inspirerades av spa-miljöer, med lugna färger, mycket utrymme och harmoniska bilder. Jag testade olika färgkombinationer, typsnitt och bildval för att skapa en visuell identitet som förmedlar stillhet och professionalitet (s. 146–147). Jag ville även hålla allt innehåll så enhetligt som möjligt (s. 141). Webbplatsen byggdes i HTML och CSS och gjordes responsiv för att fungera väl på både dator, surfplatta och i mobil. En ny sektion riktad till företag lades till för att visa möjligheter till friskvård och personalaktivitet, samt bredda målgruppen och tydliggöra verksamhetens erbjudande.</p>
                 <br>
-                <p>Garretts modell gav en tydlig struktur för hela processen – från mål och innehål till design och färdig webbplats.</p>
+                <p>Garretts modell gav en tydlig struktur för hela processen – från mål och innehåll till design och färdig webbplats.</p>
             </section>
             <section id="images">
                 <h2>4. Bilder</h2>
@@ -277,7 +277,7 @@
                         <br>⤷ <strong>uppfyllt</strong>. Hovring ger visuella förändringar som stärker användarupplevelsen och tydliggör klickbara element.
                     </li>
                 </ul>
-                <p>Samtliga krav enligt kravspecifikationen är därmed uppfylla, vilket visar att design- och utvecklingsprocessen fungerat effektivt.</p>
+                <p>Samtliga krav enligt kravspecifikationen är därmed uppfyllda, vilket visar att design- och utvecklingsprocessen fungerat effektivt.</p>
             </section>
             <section id="user-test">
                 <h2>6. Användartest</h2>
@@ -351,7 +351,7 @@
                 <p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
                 <ul class="check">
                     <li>Kortade ner texten så mycket som möjligt utan att skala av känsla eller förlora information.</li>
-                    <p>Planerar att, om tid finns, fixa en mer lättillgänlig genväg till startsidan i mobilläge. Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. Ska försöka hitta en bättre lösning för hero på sidan för "Erbjudanden & paket".</p>
+                    <p>Planerar att, om tid finns, fixa en mer lättillgänglig genväg till startsidan i mobilläge. Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. Ska försöka hitta en bättre lösning för hero på sidan för "Erbjudanden & paket".</p>
                 </ul>
             </section>
             <section id="references">
