spa.html & offers.html updated

--- a/offers.html
+++ b/offers.html
@@ -47,6 +47,15 @@
                     <li><a href="book.html">Boka nu</a></li>
                 </ul>
             </div>
+            <nav class="local-nav offers">
+                <ul>
+                    <li><a href="#popular">Våra mest bokade paket</a></li>
+                    <li><a href="#offers">Aktuella erbjudanden</a></li>
+                    <li><a href="#day">Dagsspa</a></li>
+                    <li><a href="#stay">Spa med övernattning</a></li>
+                    <li><a href="#corp">För företag</a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
 
@@ -64,14 +73,9 @@
             </picture>
             <div class="hero-text">
                 <h1>Erbjudanden & paket</h1>
-                <p>
-                    <a href="#popular" class="btn">Våra mest bokade paket</a>
-                    <a href="#offers" class="btn">Aktuella erbjudanden</a>
-                    <br>
-                    <a href="#day" class="btn-small">Spa utan övernattning</a>
-                    <a href="#stay" class="btn-small">Spa med övernattning</a>
-                    <a href="#corp" class="btn-small">För företag</a>
-                </p>
+                <p>Låt ett av våra paket bli din väg till stillhet och balans. Oavsett om du vill ha en kort paus eller en längre stund för återhämtning, fylls varje ögonblick med omsorg, ro och välbefinnande.</p>
+                <a href="#day" class="btn">Dagsspa</a>
+                <a href="#stay" class="btn">Spa med övernattning</a>
             </div>
         </section>
 
