--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -351,7 +351,8 @@
                 <p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
                 <ul class="check">
                     <li>Kortade ner texten så mycket som möjligt utan att skala av känsla eller förlora information.</li>
-                    <p>Planerar att, om tid finns, fixa en mer lättillgänglig genväg till startsidan i mobilläge. Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. Ska försöka hitta en bättre lösning för hero på sidan för "Erbjudanden & paket".</p>
+                    <li>Placerade en lokal navigering på "Erbjudanden & paket" till de olika sektionerna under den globala navigeringen.</li>
+                    <p>Planerar att, om tid finns, fixa en mer lättillgänglig genväg till startsidan i mobilläge. Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. </p>
                 </ul>
             </section>
             <section id="references">
