--- a/offers.html
+++ b/offers.html
@@ -56,6 +56,20 @@
                     <li><a href="#corp">För företag</a></li>
                 </ul>
             </nav>
+            <nav class="local-nav-mobile">
+                <a href="/index.html" class="logo-link-small">
+                    <img src="/img/ncs-logo-small.png" alt="Nordic Calm Spa logo" class="logo-small">
+                </a>
+                <ul>
+                    <li><a href="#popular">Våra mest bokade paket</a></li>
+                    <li><a href="#offers">Aktuella erbjudanden</a></li>
+                </ul>
+                <ul>
+                                      <li><a href="#day">Dagsspa</a></li>
+                    <li><a href="#stay">Spa med övernattning</a></li>
+                    <li><a href="#corp">För företag</a></li>  
+                </ul>
+            </nav>
         </nav>
     </header>
 
