--- a/spa/treatments.html
+++ b/spa/treatments.html
@@ -54,6 +54,16 @@
                     <li><a href="treatments.html" class="active">Behandlingar</a></li>
                 </ul>
             </nav>
+                        <nav class="local-nav-mobile">
+                <a href="../index.html" class="logo-link-small">
+                    <img src="../img/ncs-logo-small.png" alt="Nordic Calm Spa logo" class="logo-small">
+                </a>
+                <ul>
+                    <li><a href="bath.html">Bad & Bastu</a></li>
+                    <li><a href="relax.html">Relaxavdelning</a></li>
+                    <li><a href="treatments.html" class="active">Behandlingar</a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
 
