--- a/spa/spa.html
+++ b/spa/spa.html
@@ -54,7 +54,17 @@
                     <li><a href="treatments.html">Behandlingar</a></li>
                 </ul>
             </nav>
-        </nav>
+            <nav class="local-nav-mobile">
+                <a href="../index.html" class="logo-link-small">
+                    <img src="../img/ncs-logo-small.png" alt="Nordic Calm Spa logo" class="logo-small">
+                </a>
+                <ul>
+                    <li><a href="bath.html">Bad & Bastu</a></li>
+                    <li><a href="relax.html">Relaxavdelning</a></li>
+                    <li><a href="treatments.html">Behandlingar</a></li>
+                </ul>
+            </nav>
+            </nav>
     </header>
 
     <!-- ==================== MAIN CONTENT ==================== -->
