working with spill

--- a/spa/treatments.html
+++ b/spa/treatments.html
@@ -85,8 +85,13 @@
             </div>
         </section>
 
+        <section class="cta"><h2>Hoppa direkt till</h2>
+        <a href="#signature" class="btn-small">Ritualer & signaturbehandlingar</a>
+        <a href="#traditional" class="btn-small">Klassiska massagebehandlingar</a>
+    <a href="#face" class="btn-small">Ansiktsbehandlingar</a></section>
+
         <section class="highlights" id="body">
-            <h2>Ritualer & signaturbehandlingar</h2>
+            <h2 id="signature">Ritualer & signaturbehandlingar</h2>
             <div class="cards treatments packages">
                 <article>
                     <h3>Body & Face Ritual</h3>
@@ -209,7 +214,7 @@
             </section>
 
             <section class="highlights">
-            <h2>Klassiska massagebehandlingar</h2>
+            <h2 id="traditional">Klassiska massagebehandlingar</h2>
             <div class="cards treatments basic">
                 <article>
                     <h3>Klassisk Helkroppsmassage</h3>
