--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
 
                 <details>
                     <summary>Finns det handikappsanpassade rum?</summary>
-                    <p>Ja, vi har tillgänglighetsanpassade rum med bredare dörrar, dusch utan tröskel och extra utrymme för rullstol..</p>
+                    <p>Ja, vi har tillgänglighetsanpassade rum med bredare dörrar, dusch utan tröskel och extra utrymme för rullstol.</p>
                 </details>
 
                 <details>
