--- a/hotel/suite.html
+++ b/hotel/suite.html
@@ -52,7 +52,7 @@
 
     <!-- ==================== MAIN CONTENT ==================== -->
     <main>
-        <section class="hotel-room" <div class="room-detail">
+        <section class="room-detail">
             <div class="room-img">
                 <img src="../img/card-suite.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
             </div>
