--- a/menu/menu.html
+++ b/menu/menu.html
@@ -21,7 +21,9 @@
             <section class="intro menu">
                 <h1>Vår meny</h1>
                 <p>Rena smaker. Lokalproducerade råvaror. En matupplevelse i balans med naturen.</p>
-                <a href="#breakfast">Frukost</a> | <a href="#lunch">Lunch</a> | <a href="#dinner">Middag</a> | <a href="#drinks">Dryck</a>
+                <div class="menu links">
+                    <a href="#breakfast">Frukost</a> | <a href="#lunch">Lunch</a> | <a href="#dinner">Middag</a> | <a href="#drinks">Dryck</a>
+                </div>
             </section>
 
             <section class="menu breakfast" id="breakfast" aria-label="Frukost">
@@ -128,27 +130,34 @@
                 <dl class="drinks non-alcoholic">
                     <dt>Mineralvatten</dt>
                     <dd>Stilla / Kolsyrat</dd>
+                    <dd class="price">35 SEK</dd>
 
                     <dt>Läsk</dt>
                     <dd>Coca Cola, Coca Cola Zero, Fanta, Fanta Zero, Sprite, Sprite Zero</dd>
+                    <dd class="price">40 SEK</dd>
 
                     <dt>Färskpressad juice</dt>
                     <dd>Äpple, Apelsin, Tropisk</dd>
+                    <dd class="price">55 SEK</dd>
 
                     <dt>Te & Kaffe</dt>
                     <dd>Svart te, Grönt te, Chai, Kaffe bryggt, Espresso, Cappuccino</dd>
+                    <dd class="price">från 35 SEK</dd>
 
                     <dt>Milkshake</dt>
                     <dd>Vanilj, Choklad, Jordgubb</dd>
+                    <dd class="price">65 SEK</dd>
                 </dl>
 
                 <h3 class="category">Alkoholhaltigt</h3>
                 <dl class="drinks alcoholic">
                     <dt>Öl</dt>
                     <dd>Lager, IPA, Veteöl</dd>
+                                        <dd class="price">från 85 SEK</dd>
 
                     <dt>Cider</dt>
                     <dd>Äpple, Päron, Fläder, Hallon</dd>
+                                        <dd class="price">från 85 SEK</dd>
 
                     <dt>Vin</dt>
                     <dd>Rött: Cabernet Sauvignon, Merlot, Shiraz
@@ -157,12 +166,12 @@
                         <br>
                         Rosé: Provence Rosé
                     </dd>
+                                        <dd class="price">glas 115 SEK / flaska 495 SEK</dd>
 
                     <dt>Drinkar</dt>
                     <dd>Margarita, Mojito, Gin & Tonic, Aperol Spritz</dd>
                 </dl>
-
-                <a href="drinks.html" target="_blank" id="drink-menu-link">Se vår dryckesmeny</a>
+                                    <dd class="price">4 cl 125 SEK / 6 cl 150 SEK</dd>
             </section>
             <p class="endline">Smaker skapade med omtanke. Serverade med stillhet.</p>
         </div>
