--- a/spa/bath.html
+++ b/spa/bath.html
@@ -81,7 +81,7 @@
             <div class="hero-text">
                 <h1>Bad & Bastu</h1>
                 <p>En värld av värme, vatten och stillhet – där varje bad och bastu har sin egen själ. Känn hur musklerna slappnar av, andningen blir djupare och sinnet lugnar sig.</p>
-                <a href="../offers.html" class="btn">Välkommen att välja din upplevelse</a>
+                <a href="../offers.html" class="btn">Hitta din upplevelse</a>
             </div>
         </section>
 
