--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -20,8 +20,8 @@
             font-family: 'Noto Sans', sans-serif;
             max-width: 80ch;
             margin: 2rem auto;
-            padding: 1rem;
-            line-height: 1.6;
+            padding: 0.5rem;
+            line-height: 1.5;
         }
 
         .wrapper {
@@ -41,10 +41,10 @@
             max-width: 100%;
         }
 
-        p {
+        p, li {
             text-align: justify;
             margin: 1rem 0;
-        }
+    font-size: clamp(0.9rem, 0.5vw, 1.2rem);        }
 
         p:last-of-type {
             text-align: left;
@@ -86,7 +86,7 @@
         }
 
         li {
-            margin-bottom: 1rem;
+            margin: 0.3rem 0;
         }
 
         ul.req,
@@ -122,6 +122,12 @@
             font-size: clamp(1.2rem, 1.5vw, 1.6rem);
             margin-top: 2rem;
             color: #4c5042;
+        }
+
+        @media screen and (max-width: 500px) {
+            .wrapper {
+                padding: 1rem;
+            }
         }
     </style>
 </head>
@@ -352,7 +358,10 @@
                 <ul class="check">
                     <li>Kortade ner texten så mycket som möjligt utan att skala av känsla eller förlora information.</li>
                     <li>Placerade en lokal navigering på "Erbjudanden & paket" till de olika sektionerna under den globala navigeringen.</li>
-                    <p>Planerar att, om tid finns, fixa en mer lättillgänglig genväg till startsidan i mobilläge. Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. </p>
+                    <li>
+                        Lade till Nordic Calm Spas logga i mobilläge för enkel navigering till startsidan.
+                    </li>
+                    <p>Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. </p>
                 </ul>
             </section>
             <section id="references">
