small fixes in local-nav-mobile

--- a/book.html
+++ b/book.html
@@ -47,8 +47,11 @@
                     <li><a href="book.html" class="active">Boka nu</a></li>
                 </ul>
             </div>
+            <a href="index.html" class="logo-link-small">
+                <img src="img/ncs-logo-small.png" alt="Nordic Calm Spa logo" class="logo-small">
+            </a>
         </nav>
-    </header>
+        </header>
 
     <!-- ==================== MAIN CONTENT ==================== -->
     <main>
