--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     <li><a href="book.html">Boka nu</a></li>
                 </ul>
             </div>
+            <a href="index.html" class="logo-link-small">
+                    <img src="/img/ncs-logo-small.png" alt="Nordic Calm Spa logo" class="logo-small">
+                </a>
         </nav>
     </header>
 
