--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -41,10 +41,12 @@
             max-width: 100%;
         }
 
-        p, li {
+        p,
+        li {
             text-align: justify;
             margin: 1rem 0;
-    font-size: clamp(0.9rem, 0.5vw, 1.2rem);        }
+            font-size: clamp(0.9rem, 0.5vw, 1.2rem);
+        }
 
         p:last-of-type {
             text-align: left;
@@ -361,8 +363,8 @@
                     <li>
                         Lade till Nordic Calm Spas logga i mobilläge för enkel navigering till startsidan.
                     </li>
-                    <p>Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. </p>
                 </ul>
+                <p>Bilder på människor är svårt, då jag inte hittat några sådana som riktigt passat för min webbplats. </p>
             </section>
             <section id="references">
                 <h2>Källförteckning</h2>
