--- a/spa/treatments.html
+++ b/spa/treatments.html
@@ -54,7 +54,7 @@
                     <li><a href="treatments.html" class="active">Behandlingar</a></li>
                 </ul>
             </nav>
-                        <nav class="local-nav-mobile">
+            <nav class="local-nav-mobile">
                 <a href="../index.html" class="logo-link-small">
                     <img src="../img/ncs-logo-small.png" alt="Nordic Calm Spa logo" class="logo-small">
                 </a>
@@ -85,10 +85,12 @@
             </div>
         </section>
 
-        <section class="cta"><h2>Hoppa direkt till</h2>
-        <a href="#signature" class="btn-small">Ritualer & signaturbehandlingar</a>
-        <a href="#traditional" class="btn-small">Klassiska massagebehandlingar</a>
-    <a href="#face" class="btn-small">Ansiktsbehandlingar</a></section>
+        <section class="cta">
+            <h2>Hoppa direkt till</h2>
+            <a href="#signature" class="btn-small">Ritualer & signaturbehandlingar</a>
+            <a href="#traditional" class="btn-small">Klassiska massagebehandlingar</a>
+            <a href="#face" class="btn-small">Ansiktsbehandlingar</a>
+        </section>
 
         <section class="highlights" id="body">
             <h2 id="signature">Ritualer & signaturbehandlingar</h2>
@@ -203,17 +205,17 @@
                         <p>75 min<br>1 295 SEK</p>
                         <a href="#book-treatment">Boka här</a>
                     </div>
-                </article> 
+                </article>
             </div>
-            </section>
+        </section>
 
-            <section class="treatment-transition">
-                <h2>Valet är ditt</h2>
-                <br>
-                <p>Våra ritualer och signaturbehandlingar kombinerar flera tekniker för att ge en djupare känsla av avkoppling. Vill du ha något mer direkt för spänningar och muskelvärk? Då kan våra klassiska massagebehandlingar vara perfekta för dig.</p>
-            </section>
+        <section class="treatment-transition">
+            <h2>Valet är ditt</h2>
+            <br>
+            <p>Våra ritualer och signaturbehandlingar kombinerar flera tekniker för att ge en djupare känsla av avkoppling. Vill du ha något mer direkt för spänningar och muskelvärk? Då kan våra klassiska massagebehandlingar vara perfekta för dig.</p>
+        </section>
 
-            <section class="highlights">
+        <section class="highlights">
             <h2 id="traditional">Klassiska massagebehandlingar</h2>
             <div class="cards treatments basic">
                 <article>
@@ -255,12 +257,12 @@
             </div>
         </section>
 
-                    <section class="treatment-transition">
-                <h2>Från topp till tå</h2>
-                <br>
-                <p>En stund massage är bara början. Ansiktbehandlingarna kompletterar kroppens välbefinnande genom att återställa hudens balans, lyster och energi. Perfekt för dig som vill ha en helhetsupplevelse.</p>
-                <p class="more">Oavsett hudtyp eller behov har vi behandlingar som lugnar, återfuktar och vitaliserar. Här hittar du allt från mjuka, stresslindrande ritualer till kraftfulla anti-age behandlingar.</p>
-            </section>
+        <section class="treatment-transition">
+            <h2>Från topp till tå</h2>
+            <br>
+            <p>En stund massage är bara början. Ansiktbehandlingarna kompletterar kroppens välbefinnande genom att återställa hudens balans, lyster och energi. Perfekt för dig som vill ha en helhetsupplevelse.</p>
+            <p class="more">Oavsett hudtyp eller behov har vi behandlingar som lugnar, återfuktar och vitaliserar. Här hittar du allt från mjuka, stresslindrande ritualer till kraftfulla anti-age behandlingar.</p>
+        </section>
 
         <section class="highlights" id="face">
             <h2>Ansiktsbehandlingar</h2>
