--- a/restaurant.html
+++ b/restaurant.html
@@ -72,24 +72,21 @@
             </div>
         </section>
 
-        <section class="intro">
-            <div class="restaurant-intro">
-                <div class="info-wrapper">
-                    <h2 class="left">Restauranginfo</h2>
-                    <p>Vi serverar nordiskt inspirerad mat med omtanke. För att säkra en plats rekommenderar vi bordsbokning.</p>
-                    <ul>
-                        <li><strong>Öppettider:</strong> 06:00–22:00</li>
-                        <li><strong>Servering:</strong> A la carte fram till 22:00. Efter det finns enklare rätter från barmenyn.</li>
-                        <li><strong>Bordsbokning:</strong> Du kan boka bord <a href="#book-restaurant">här</a></li>
-                    </ul>
-                </div>
-                <div class="about-wrapper">
-                    <h2 class="left">Mat med omtanke</h2>
-                    <p>Vi lagar allt från grunden med lokalproducerade råvaror. Menyn varierar efter säsong, och varje rätt är skapad för att ge balans och energi – både smakmässigt och näringsmässigt.</p>
-                    <br>
-                    <p>Vi tar hänsyn till allergier och intoleranser, och erbjuder alternativ på förfrågan för att alla gäster ska kunna njuta av en trygg och god måltid.</p>
-                </div>
-
+        <section class="restaurant-intro">
+            <div class="info-wrapper">
+                <h2 class="left">Restauranginfo</h2>
+                <p>Vi serverar nordiskt inspirerad mat med omtanke. För att säkra en plats rekommenderar vi bordsbokning.</p>
+                <ul>
+                    <li><strong>Öppettider:</strong> 06:00–22:00</li>
+                    <li><strong>Servering:</strong> A la carte fram till 22:00. Efter det finns enklare rätter från barmenyn.</li>
+                    <li><strong>Bordsbokning:</strong> Du kan boka bord <a href="#book-restaurant">här</a></li>
+                </ul>
+            </div>
+            <div class="about-wrapper">
+                <h2 class="left">Mat med omtanke</h2>
+                <p>Vi lagar allt från grunden med lokalproducerade råvaror. Menyn varierar efter säsong, och varje rätt är skapad för att ge balans och energi – både smakmässigt och näringsmässigt.</p>
+                <br>
+                <p>Vi tar hänsyn till allergier och intoleranser, och erbjuder alternativ på förfrågan för att alla gäster ska kunna njuta av en trygg och god måltid.</p>
             </div>
         </section>
 
